// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectTimebar :: render SelectTimebar :: render :: nominal case 1`] = `
<div>
  <div
    className="p10"
  >
    <h4>
      Select a timebar
    </h4>
    <form
      className="form-horizontal"
      onSubmit={[Function]}
      style={
        Object {
          "maxWidth": "200px",
          "width": "95%",
        }
      }
    >
      <div
        className="form-group"
      >
        <select
          className="form-control"
        >
          <option
            value="1ad5eeb6-ce8f-4a86-a020-22eaa77ec126"
          >
            foo
          </option>
          <option
            value="4b5b4107-4393-4655-80ef-7fc82d1cb24a"
          >
            bar
          </option>
        </select>
      </div>
      <div
        className="form-group"
      >
        <input
          className="btn btn-primary"
          type="submit"
          value="Select"
        />
         
        <button
          className="btn btn-info"
          onClick={[Function]}
        >
          Create a timebar
        </button>
      </div>
    </form>
  </div>
  <div
    className="hidden"
  >
    <h4>
      Create a timebar
    </h4>
    <form
      className="form-horizontal"
      onSubmit={[Function]}
      style={
        Object {
          "maxWidth": "200px",
          "width": "95%",
        }
      }
    >
      <div
        className="form-group"
      >
        <input
          className="form-control"
          onChange={[Function]}
          placeholder="Timebar name"
        />
      </div>
      <div
        className="form-group"
      >
        <input
          className="btn btn-primary"
          disabled={false}
          type="submit"
          value="Create"
        />
         
        <button
          className="btn btn-info"
          onClick={[Function]}
        >
          Select a timebar
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`SelectTimebar :: render TimebarCreation :: hidden 1`] = `
<div
  className="p10"
>
  <h4>
    Select a timebar
  </h4>
  <form
    className="form-horizontal"
    onSubmit={[Function]}
    style={
      Object {
        "maxWidth": "200px",
        "width": "95%",
      }
    }
  >
    <div
      className="form-group"
    >
      <select
        className="form-control"
      >
        <option
          value="1ad5eeb6-ce8f-4a86-a020-22eaa77ec126"
        >
          foo
        </option>
        <option
          value="4b5b4107-4393-4655-80ef-7fc82d1cb24a"
        >
          bar
        </option>
      </select>
    </div>
    <div
      className="form-group"
    >
      <input
        className="btn btn-primary"
        type="submit"
        value="Select"
      />
       
      <button
        className="btn btn-info"
        onClick={[Function]}
      >
        Create a timebar
      </button>
    </div>
  </form>
</div>
`;

exports[`SelectTimebar :: render TimebarCreation :: select 1`] = `
<div
  className="p10"
>
  <h4>
    Select a timebar
  </h4>
  <form
    className="form-horizontal"
    onSubmit={[Function]}
    style={
      Object {
        "maxWidth": "200px",
        "width": "95%",
      }
    }
  >
    <div
      className="form-group"
    >
      <select
        className="form-control"
      >
        <option
          value="1ad5eeb6-ce8f-4a86-a020-22eaa77ec126"
        >
          foo
        </option>
        <option
          value="4b5b4107-4393-4655-80ef-7fc82d1cb24a"
        >
          bar
        </option>
      </select>
    </div>
    <div
      className="form-group"
    >
      <input
        className="btn btn-primary"
        type="submit"
        value="Select"
      />
       
      <button
        className="btn btn-info"
        onClick={[Function]}
      >
        Create a timebar
      </button>
    </div>
  </form>
</div>
`;

exports[`SelectTimebar :: render TimebarSelection :: hidden-This timebar name is already taken 1`] = `
<div
  className="p10"
>
  <h4>
    Create a timebar
  </h4>
  <form
    className="form-horizontal"
    onSubmit={[Function]}
    style={
      Object {
        "maxWidth": "200px",
        "width": "95%",
      }
    }
  >
    <div
      className="form-group"
    >
      <div
        className="alert alert-danger"
        role="alert"
      >
        This timebar name is already taken
      </div>
      <input
        className="form-control"
        onChange={[Function]}
        placeholder="Timebar name"
      />
    </div>
    <div
      className="form-group"
    >
      <input
        className="btn btn-primary"
        disabled={true}
        type="submit"
        value="Create"
      />
       
      <button
        className="btn btn-info"
        onClick={[Function]}
      >
        Select a timebar
      </button>
    </div>
  </form>
</div>
`;

exports[`SelectTimebar :: render TimebarSelection :: hidden-null 1`] = `
<div
  className="p10"
>
  <h4>
    Create a timebar
  </h4>
  <form
    className="form-horizontal"
    onSubmit={[Function]}
    style={
      Object {
        "maxWidth": "200px",
        "width": "95%",
      }
    }
  >
    <div
      className="form-group"
    >
      <input
        className="form-control"
        onChange={[Function]}
        placeholder="Timebar name"
      />
    </div>
    <div
      className="form-group"
    >
      <input
        className="btn btn-primary"
        disabled={false}
        type="submit"
        value="Create"
      />
       
      <button
        className="btn btn-info"
        onClick={[Function]}
      >
        Select a timebar
      </button>
    </div>
  </form>
</div>
`;

exports[`SelectTimebar :: render TimebarSelection :: select-This timebar name is already taken 1`] = `
<div
  className="hidden"
>
  <h4>
    Create a timebar
  </h4>
  <form
    className="form-horizontal"
    onSubmit={[Function]}
    style={
      Object {
        "maxWidth": "200px",
        "width": "95%",
      }
    }
  >
    <div
      className="form-group"
    >
      <div
        className="alert alert-danger"
        role="alert"
      >
        This timebar name is already taken
      </div>
      <input
        className="form-control"
        onChange={[Function]}
        placeholder="Timebar name"
      />
    </div>
    <div
      className="form-group"
    >
      <input
        className="btn btn-primary"
        disabled={true}
        type="submit"
        value="Create"
      />
       
      <button
        className="btn btn-info"
        onClick={[Function]}
      >
        Select a timebar
      </button>
    </div>
  </form>
</div>
`;

exports[`SelectTimebar :: render TimebarSelection :: select-null 1`] = `
<div
  className="hidden"
>
  <h4>
    Create a timebar
  </h4>
  <form
    className="form-horizontal"
    onSubmit={[Function]}
    style={
      Object {
        "maxWidth": "200px",
        "width": "95%",
      }
    }
  >
    <div
      className="form-group"
    >
      <input
        className="form-control"
        onChange={[Function]}
        placeholder="Timebar name"
      />
    </div>
    <div
      className="form-group"
    >
      <input
        className="btn btn-primary"
        disabled={false}
        type="submit"
        value="Create"
      />
       
      <button
        className="btn btn-info"
        onClick={[Function]}
      >
        Select a timebar
      </button>
    </div>
  </form>
</div>
`;
